--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>How AI Scribes Improve Clinical Workflow and Patient Care</title>
-
+<meta name="google-site-verification" content="QCmE4kP5iFKeI7uxKKNyezNSlF4BkVtAsvA8OO20fNs" />
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -102,7 +102,11 @@
 <p>Future AI scribe systems are expected to incorporate even greater intelligence, including summarization of patient histories, predictive insights, and recommendations for follow-up care. Advanced natural language processing will capture subtleties in clinical conversations and contextual information, improving accuracy and decision support.</p>
 
 <p>Integration with other AI-driven healthcare tools will further enhance workflow and patient care. The evolution of AI scribes promises a future where documentation is effortless, accurate, and actively contributes to clinical decision-making, efficiency, and patient satisfaction.</p>
-
+<h2>
+  <a href="https://scribemedixcare.vercel.app/" target="_blank">
+    Why Accuracy in Clinical Documentation Matters More Than Ever
+  </a>
+</h2>
 <h2>FAQs</h2>
 
 <p><strong>What are AI scribes</strong><br>
@@ -130,3 +134,4 @@
 
 </body>
 </html>
+
